[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/frontrider.commandline/panel/panel.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 150 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="FollowTerminal" type="CheckButton" parent="VBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
margin_left = 795.0
margin_right = 976.0
margin_bottom = 40.0
pressed = true
text = "Follow Terminal"
flat = true

[node name="ClearButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 980.0
margin_right = 1024.0
margin_bottom = 40.0
action_mode = 0
text = "Clear"
flat = true
icon_align = 1
expand_icon = true

[node name="TerminalScroll" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Terminal" type="RichTextLabel" parent="VBoxContainer/TerminalScroll"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="HostLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 184.0
margin_bottom = 40.0
size_flags_vertical = 7
text = "[frontrider@frontrider-pc ~]$ "
valign = 1

[node name="Input" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 188.0
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
expand_to_text_length = true
clear_button_enabled = true
placeholder_text = "Enter a command"
caret_blink = true

[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="resized" from="VBoxContainer/TerminalScroll/Terminal" to="." method="_on_Terminal_resized"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
